<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Animation.AppCompat.DropDownUp">

    <EditText
        android:id="@+id/username"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_username"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:paddingBottom="10dp"
        android:layout_above="@+id/forgot_password"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password"
        android:text="@string/link_forgot_password"
        android:textSize="@dimen/widget_text_size"
        android:clickable="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="2dp"


        />

    <Button
        android:id="@+id/login"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textSize="@dimen/widget_text_size"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_customised"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="62dp"
        android:layout_above="@+id/sign_up_link"
        android:layout_centerHorizontal="true"


        android:paddingTop="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_link"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/link_sign_up"
        android:textSize="@dimen/widget_text_size"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="22dp"


        />

</RelativeLayout>

